# comp-2012

asm2/: CMakeLists.txt  TodoCattlefarm.cpp  TodoFarmer.cpp  TodoFarmland.h  TodoFeeder.cpp  TodoFeeder.h
delegating_constructor/: CMakeLists.txt  main.cpp
lab1/: Makefile  cheese.cpp  cheese.h  chicken.cpp  chicken.h  dough.cpp  dough.h  herb.cpp  herb.h  mainLunchset.cpp  mainPasta.cpp  mainPizza.cpp  mainSoup.cpp  pasta.cpp  pasta.h  pizza.cpp  pizza.h  soup.cpp  soup.h  spaghetti.cpp  spaghetti.h
lab2/: Makefile  factory.cpp  mask.cpp
lab3/: CMakeLists.txt  Coronavirus.cpp  Coronavirus.h  Doctor.cpp  Doctor.h  Norovirus.cpp  Norovirus.h  Patient.cpp  Patient.h  Patient_with_coronavirus.cpp  Patient_with_coronavirus.h  Patient_with_norovirus.cpp  Patient_with_norovirus.h  Person.h  Virus.h  main.cpp
lab4/: CMakeLists.txt  beverage_store.cpp  gold_card.cpp  regular_card.cpp  sliver_card.cpp  vip_lounge.cpp
lab5/: CMakeLists.txt  organization.cpp  organization.h  regionx.cpp  regionx.h  regiony.cpp  regiony.h  who.cpp  who.h
lab6/: CMakeLists.txt  Customer.cpp  Customer.h  Invoice.cpp  Invoice.h  Person.cpp  Person.h  Product.cpp  Product.h  Salesman.cpp  Salesman.h  main.cpp
lab7/: CMakeLists.txt  main.cpp  set.h
pa2/: CMakeLists.txt  TodoCattlefarm.h  TodoCow.cpp  TodoCow.h  TodoEmployee.cpp  TodoFarmer.h  TodoFarmland.cpp  TodoProperty.cpp  TodoScene.cpp  test.cpp
pa3/: CMakeLists.txt  hotpot.txt  infectionAnalyzer.cpp  infectionAnalyzer.h  infections1.txt  infections2.txt  infections3.txt  infections4.txt  main.cpp  node.h  tree.h  treeImplementation.h
